[package]
name = "kv3"
version = "0.1.0"
edition = "2021"
authors = ["dxshie <dxshie@revision.pub>"]
description = "kv3 (keyvalues 3) format parser with serde support"
license = "GNU GENERAL PUBLIC LICENSE"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
nom = { version = "7" }
log = "0.4"
