[package]
name = "kv3"
version = "0.1.0"
edition = "2021"
authors = ["dxshie <dxshie@revision.pub>"]
description = "kv3 (keyvalues 3) format parser with serde support"
license = "GPL-3.0-only"
keywords = ["serde", "serialization", "parser", "valve", "kv3"]
readme = "README.md"
repository = "https://github.com/dxshie/kv3"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
nom = { version = "7" }
log = "0.4"
